Firefox offset bug: use margin instead of padding.
For some reason, the position calculation is broken in firefox when
a DOM object in the ancestry change uses padding. So use margin to
shift the view area down.

--- a/include/base.css
+++ b/include/base.css
@@ -132,7 +132,7 @@ html {
 /* Do not set width/height for VNC_screen or VNC_canvas or incorrect
  * scaling will occur. Canvas resizes to remote VNC settings */
 #noVNC_screen {
-  padding-top:40px;
+  margin-top:40px;
   text-align: center;
   display: table;
   width:100%;
